--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Meteor Chat with Rooms
 -----------
 
-Chat application with functionality of Rooms.
-Currently limited to showing the last 5 room
+Chat application with added functionality of Rooms.
+Currently limited to showing the last 5 rooms
 
-Thanks to Tom Blomfield as the code for the chat functionality itself is almost entirely his.
+Thanks to Tom Blomfield as the code for the chat functionality is pulled from his sample chat application. 
 Live deploy at http://chat-with-rooms.meteor.com
