--- a/README
+++ b/README
@@ -4,5 +4,14 @@ Meteor Chat with Rooms
 Chat application with added functionality of Rooms.
 Currently limited to showing the last 5 rooms
 
+Additional Functionality:
+Users must enter a name before joining a room
+Room listing shows number of current participants
+Rooms now list participants. When participants leave a room by clicking leave room, they are removed from the list. Otherwise, they still appear for now.
+
+Future planned functionality:
+Messaging a user directly by clicking the participant name
+Suggestions welcome!
+
 Thanks to Tom Blomfield as the code for the chat functionality with some modifications is pulled from his sample chat application. 
 Live deploy at http://chat-with-rooms.meteor.com
